<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multiversal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="heading">Scheduling</string>
    <string name="day_to_operate">Day to Operate</string>
    <string name="days_prompt">Choose</string>
    <string name="device_no">Device No</string>
    <string name="device_name">Device Name</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time">Stop Time</string>
    <string name="device_config">Device Configure</string>
    <string name="simulation">Simulation</string>
    <string name="Add">Add</string>
    <string name="interval">Interval</string>
    <string name="duration">Duration</string>
   <string name="strLang">en</string>
     <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
    <string name="btnSearch">Connect  Bluetooth </string>
    <string name="btnSend">Print</string>
    <string name="btn_test">Print  Test  Page</string>
    <string name="btnClose">Close</string>
    <string name="txt_content">&quot;&quot;</string>
    <string name="menu_settings">set</string>
    <string name="button_scan">Scan for devices</string>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thusday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="title_activity_add_device">AddDevice</string>
    <string name="title_activity_scheduling">Scheduling</string>
    <string name="title_activity_simulation">Simulation</string>

</resources>