<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical" >

        <include
            android:id="@+id/editfav_include_lay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/include_headler" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSearch" >
    </Button>

    <EditText
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:gravity="center_vertical|top"
        android:text="@string/txt_content"
        android:textSize="16sp" >
    </EditText>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSend" >
    </Button>

    <Button
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test"
        android:visibility="gone" >
    </Button>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnClose" >
    </Button>

</LinearLayout>