<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.multiversal.AddDevice" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/device_no"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/edt_device_no"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/shape_rounded_rectangle"
            android:enabled="false"
            android:gravity="left"
            android:padding="10dp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/device_name"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/edt_device_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/shape_rounded_rectangle"
            android:gravity="left"
            android:padding="10dp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn_bg_selector"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Add"
            android:textColor="#000000"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/btn_bg_selector"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="Device #"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="Device Name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>