<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.multiversal.MainActivity" >



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <View
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#2E2E2E" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#2E2E2E" />

        <TextView
            android:id="@+id/btn_device_simulation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_selector"
            android:gravity="center"
            android:padding="10dp"
            android:text="Add Device Scheduling Details"
            android:textColor="#000000"
            android:typeface="serif" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/device_name"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_rounded_rectangle"
                    android:padding="5dp"
                    android:prompt="@string/days_prompt"
                    android:textColor="@color/textcolor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/device_no"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="172dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/shape_rounded_rectangle"
                    android:padding="5dp"
                    android:prompt="@string/days_prompt"
                    android:textColor="@color/textcolor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/day_to_operate"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <com.multiversal.MultiSelectionSpinner
                    android:id="@+id/spinner1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
       
                    
                    android:padding="10dp"
                    android:prompt="@string/days_prompt"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/start_time"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/ed_start_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_rounded_rectangle"
                    android:gravity="left"
                    android:hint="hh:mm"
                    android:padding="10dp"
                    android:textColor="@color/textcolor"
                    android:typeface="serif" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/stop_time"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/ed_stop_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_rounded_rectangle"
                    android:gravity="left"
                    android:hint="hh:mm"
                    android:padding="10dp"
                    android:textColor="@color/textcolor"
                    android:typeface="serif" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="On Time"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/ed_interval"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_rounded_rectangle"
                    android:ems="10"
                    android:gravity="left"
                    android:hint="Sec"
                    android:padding="10dp"
                    android:textColor="@color/textcolor"
                    android:typeface="serif" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="Off Time"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/ed_duration"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_rounded_rectangle"
                    android:gravity="left"
                    android:hint="Sec"
                    android:padding="10dp"
                    android:textColor="@color/textcolor"
                    android:typeface="serif" />
            </LinearLayout>

            <TextView
                android:id="@+id/btn_add"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_bg_selector"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/Add"
                android:textColor="#000000"
                android:typeface="serif" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>